# cpp-semestralny-projekt-register_dlznikov

./: CMakeLists.txt  ChangeLog.txt  README.md  dokumentacia.txt  evidencia.cpp  evidencia.h  main.cpp  testy.cpp
